# dbt_rds

./: README.md  pyproject.toml
dbt_project/: dbt_project.yml
dbt_project/models/marts/: mart_customers.sql
dbt_project/models/staging/: stg_customers.sql
dbt_project/seeds/: region.csv
